# cpp-disruptor

./: .gitignore  BENCHMARK.md  CMakeLists.txt  COMMAND.md  PERFORMANCE.md  PROMP.md  README.md  TODO.md  VALGRIND.md
diagram/: overview.mermaid
include/: AbstractSequencer.hpp  AlertException.hpp  BatchEventProcessor.hpp  BlockingWaitStrategy.hpp  BusySpinWaitStrategy.hpp  Common.hpp  Cursored.hpp  DataProvider.h  DataProvider.hpp  Disruptor.hpp  EventProcessor.hpp  FixedSequenceGroup.h  FixedSequenceGroup.hpp  InsufficientCapacityException.h  InsufficientCapacityException.hpp  MultiProducerSequencer.hpp  ProcessingSequenceBarrier.hpp  ProducerType.hpp  RingBuffer.hpp  Sequence.h  Sequence.hpp  SequenceBarrier.h  SequenceBarrier.hpp  SequenceGroupForMultiThread.hpp  SequenceGroupForSingleThread.hpp  Sequenced.h  Sequenced.hpp  Sequencer.h  Sequencer.hpp  SingleProducerSequencer.hpp  SleepingWaitStrategy.hpp  TimeoutException.h  TimeoutException.hpp  Util.h  Util.hpp  WaitStrategy.h  WaitStrategy.hpp  WaitStrategyType.hpp  YieldingWaitStrategy.hpp  event.hpp  (+1 more)
include/barriers/: ProcessingSequenceBarrier.hpp  SequenceBarrier.hpp
include/common/: Util.hpp
include/processor/: BatchEventProcessor.hpp
include/ring_buffer/: RingBuffer.hpp
include/sequence/: Sequence.hpp  SequenceGroupForMultiThread.hpp  SequenceGroupForSingleThread.hpp
include/sequencer/: MultiProducerSequencer.hpp  Sequencer.hpp  SingleProducerSequencer.hpp
include/wait_strategy/: AdaptiveWaitStrategy.hpp  BusySpinWaitStrategy.hpp  SleepingWaitStrategy.hpp  WaitStrategy.hpp  WaitStrategyType.hpp  YieldingWaitStrategy.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  disruptor_test.cpp
tests/common/: TestEvent.hpp
tests/unit/barrier/: processing_sequence_barrier_test.cpp
tests/unit/common/: util_test.cpp
tests/unit/processor/: batch_event_processor_test.cpp
tests/unit/ring_buffer/: ring_buffer_test.cpp
tests/unit/sequence/: sequence_group_for_multi_thread_test.cpp  sequence_group_for_single_thread_test.cpp  sequence_test.cpp
tests/unit/sequencer/: multi_producer_sequencer_test.cpp  single_producer_sequencer_test.cpp
